--- a/rcon_protocol/Cargo.toml
+++ b/rcon_protocol/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rcon_protocol"
 version = "0.1.0"
-authors = ["Aleksandr Lykhouzov <aleksandr.lykhouzov@lecreuset.com>"]
+authors = ["Aleksandr Lykhouzov <lykhouzov@gmail.com>"]
 edition = "2018"
 
 [lib]
